--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:indeterminate="true" />
 
-    <Button
+    <com.github.marfikus.jokeapp.CorrectButton
         android:id="@+id/actionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
